@@ -18,20 +18,13 @@
 
 package eu.fasten.analyzer.metadataplugin;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.sql.Timestamp;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import eu.fasten.analyzer.metadataplugin.db.MetadataDao;
-import eu.fasten.core.data.ExtendedRevisionCallGraph;
-import eu.fasten.core.data.graphdb.GidGraph;
-import eu.fasten.core.data.metadatadb.codegen.tables.records.EdgesRecord;
+import eu.fasten.core.data.metadatadb.MetadataDao;
+import eu.fasten.core.data.RevisionCallGraph;
 import org.jooq.DSLContext;
-import org.jooq.JSONB;
 import org.json.JSONException;
 import org.json.JSONObject;
 import org.junit.jupiter.api.Test;
@@ -43,19 +36,19 @@ public class MetadataDatabasePluginTest {
 
     private MetadataDatabasePlugin.MetadataDBExtension metadataDBExtension;
 
-   @BeforeEach
-   public void setUp() {
-       var dslContext = Mockito.mock(DSLContext.class);
-       metadataDBExtension = new MetadataDatabasePlugin.MetadataDBExtension();
-       metadataDBExtension.setTopic("fasten.OPAL.out");
-       metadataDBExtension.setDBConnection(dslContext);
-   }
+    @BeforeEach
+    public void setUp() {
+        var dslContext = Mockito.mock(DSLContext.class);
+        metadataDBExtension = new MetadataDatabasePlugin.MetadataDBExtension();
+        metadataDBExtension.setTopic("fasten.OPAL.out");
+        metadataDBExtension.setDBConnection(dslContext);
+    }
 
-   @Test
-   public void consumeJsonErrorTest() {
-       metadataDBExtension.consume("{\"payload\":{\"foo\":\"bar\"}}");
-       assertNotNull(metadataDBExtension.getPluginError());
-   }
+    @Test
+    public void consumeJsonErrorTest() {
+        metadataDBExtension.consume("{\"payload\":{\"foo\":\"bar\"}}");
+        assertNotNull(metadataDBExtension.getPluginError());
+    }
 
     @Test
     public void saveToDatabaseTest() {
@@ -114,7 +107,7 @@ public class MetadataDatabasePluginTest {
         long fileId = 3;
         Mockito.when(metadataDao.insertFile(packageVersionId, "file.java", null, null, null)).thenReturn(fileId);
         Mockito.when(metadataDao.batchInsertCallables(Mockito.anyList())).thenReturn(List.of(64L, 65L, 100L));
-        long id = metadataDBExtension.saveToDatabase(new ExtendedRevisionCallGraph(json), metadataDao);
+        long id = metadataDBExtension.saveToDatabase(new RevisionCallGraph(json), metadataDao);
         assertEquals(packageVersionId, id);
 
         Mockito.verify(metadataDao).insertPackage(json.getString("product"), "mvn", null, null, null);
@@ -195,7 +188,7 @@ public class MetadataDatabasePluginTest {
         long fileId = 3;
         Mockito.when(metadataDao.insertFile(packageVersionId, "file.java", null, null, null)).thenReturn(fileId);
         Mockito.when(metadataDao.batchInsertCallables(Mockito.anyList())).thenReturn(List.of(64L, 65L, 100L));
-        long id = metadataDBExtension.saveToDatabase(new ExtendedRevisionCallGraph(json), metadataDao);
+        long id = metadataDBExtension.saveToDatabase(new RevisionCallGraph(json), metadataDao);
         assertEquals(packageVersionId, id);
 
         Mockito.verify(metadataDao).insertPackage(json.getString("product"), "mvn", null, null,
@@ -278,7 +271,7 @@ public class MetadataDatabasePluginTest {
         Mockito.when(metadataDao.insertFile(packageVersionId, "file.java", null, null, null)).thenReturn(fileId);
         Mockito.when(metadataDao.batchInsertCallables(Mockito.anyList())).thenReturn(List.of(64L, 65L, 100L));
         metadataDBExtension.setPluginError(new RuntimeException());
-        long id = metadataDBExtension.saveToDatabase(new ExtendedRevisionCallGraph(json), metadataDao);
+        long id = metadataDBExtension.saveToDatabase(new RevisionCallGraph(json), metadataDao);
         assertEquals(packageVersionId, id);
 
         Mockito.verify(metadataDao).insertPackage(json.getString("product"), "mvn", null, null,
@@ -287,59 +280,42 @@ public class MetadataDatabasePluginTest {
                 json.getString("version"), null, null);
     }
 
-   @Test
-   public void saveToDatabaseEmptyJsonTest() {
-       var metadataDao = Mockito.mock(MetadataDao.class);
-       var json = new JSONObject();
-       assertThrows(JSONException.class, () -> metadataDBExtension
-               .saveToDatabase(new ExtendedRevisionCallGraph(json), metadataDao));
-   }
-
-   @Test
-   public void consumerTopicsTest() {
-       var topics = Optional.of(Collections.singletonList("fasten.OPAL.out"));
-       assertEquals(topics, metadataDBExtension.consumeTopic());
-   }
-
-   @Test
-   public void consumerTopicChangeTest() {
-       var topics1 = Optional.of(Collections.singletonList("fasten.OPAL.out"));
-       assertEquals(topics1, metadataDBExtension.consumeTopic());
-       var differentTopic = "DifferentKafkaTopic";
-       var topics2 = Optional.of(Collections.singletonList(differentTopic));
-       metadataDBExtension.setTopic(differentTopic);
-       assertEquals(topics2, metadataDBExtension.consumeTopic());
-   }
-
-   @Test
-   public void nameTest() {
-       var name = "Metadata plugin";
-       assertEquals(name, metadataDBExtension.name());
-   }
-
     @Test
-    public void descriptionTest() {
-    var description = "Metadata plugin. "
-            + "Consumes ExtendedRevisionCallgraph-formatted JSON objects from Kafka topic"
-            + " and populates metadata database with consumed data"
-            + " and writes graph of GIDs of callgraph to another Kafka topic.";
-    assertEquals(description, metadataDBExtension.description());
+    public void saveToDatabaseEmptyJsonTest() {
+        var metadataDao = Mockito.mock(MetadataDao.class);
+        var json = new JSONObject();
+        assertThrows(JSONException.class, () -> metadataDBExtension
+                .saveToDatabase(new RevisionCallGraph(json), metadataDao));
     }
 
     @Test
-    public void writeGraphToFileTest() throws IOException {
-    var nodes = List.of(1L, 2L, 3L);
-    var edge1 = new EdgesRecord(1L, 2L, JSONB.valueOf(""));
-    var edge2 = new EdgesRecord(2L, 3L, JSONB.valueOf(""));
-    var edges = List.of(edge1, edge2);
-    var product = "test";
-    var version = "0.0.1";
-    var graph = new GidGraph(1L, product, version, nodes, 2, edges);
-    metadataDBExtension.writeGraphToFile(graph);
-    var file = "gid_graph.txt";
-    assertTrue(new File(file).exists());
-    var jsonFile = new JSONObject(Files.readString(Paths.get(file)));
-    assertEquals(graph, GidGraph.getGraph(jsonFile.getJSONObject("payload")));
-    assertTrue(new File(file).delete());
+    public void consumerTopicsTest() {
+        var topics = Optional.of(Collections.singletonList("fasten.OPAL.out"));
+        assertEquals(topics, metadataDBExtension.consumeTopic());
+    }
+
+    @Test
+    public void consumerTopicChangeTest() {
+        var topics1 = Optional.of(Collections.singletonList("fasten.OPAL.out"));
+        assertEquals(topics1, metadataDBExtension.consumeTopic());
+        var differentTopic = "DifferentKafkaTopic";
+        var topics2 = Optional.of(Collections.singletonList(differentTopic));
+        metadataDBExtension.setTopic(differentTopic);
+        assertEquals(topics2, metadataDBExtension.consumeTopic());
+    }
+
+    @Test
+    public void nameTest() {
+        var name = "Metadata plugin";
+        assertEquals(name, metadataDBExtension.name());
+    }
+
+    @Test
+    public void descriptionTest() {
+        var description = "Metadata plugin. "
+                + "Consumes ExtendedRevisionCallgraph-formatted JSON objects from Kafka topic"
+                + " and populates metadata database with consumed data"
+                + " and writes graph of GIDs of callgraph to another Kafka topic.";
+        assertEquals(description, metadataDBExtension.description());
     }
 }
